# check-json5

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
pre_commit_hooks/: check_json5.py
pypackages/pre_commit_hooks/: check_json5.py
